# clblast-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
clblast/: Cargo.toml  output.file
clblast-sys/: Cargo.toml  build.rs
clblast-sys/src/: bindings.rs  internal.rs  lib.rs
clblast/benches/: criterion_bench.rs
clblast/src/: amax.rs  amin.rs  asum.rs  axpy.rs  copy.rs  dot.rs  dotc.rs  gemm.rs  lib.rs  max.rs  min.rs  nrm2.rs  result.rs  scal.rs  sum.rs  swap.rs
