[package]
name = "clblast-sys"
version = "0.1.0"
authors = ["csicar <carsten.csiky@gmail.com>"]
edition = "2018"
build="build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc="0.2"
ocl-core="0.11.2"
cl-sys="*"
snafu="0.6.10"


[build-dependencies]
# cc = { version = "1.0", features = ["parallel"] }
cmake = "0.1"
bindgen ="*"

pkg-config = "0.3"

[dev-dependencies]
ocl ="*"
