[package]
name = "clblast-sys"
version = "0.1.0"
description = "clblast bindings for rust"
license="Apache-2.0"
repository="https://github.com/csicar/clblast-rs"
authors = ["csicar <carsten.csiky@gmail.com>"]
edition = "2018"
build="build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc="0.2"
cl-sys="0.4.2"


[build-dependencies]
cmake = "0.1"
bindgen ="0.58.1"

[dev-dependencies]
ocl ="0.19.3"
