[package]
name = "clblast"
version = "0.1.0"
authors = ["csicar <carsten.csiky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ocl="0.19.3"
ocl-core="*"
clblast-sys = { version = "*", path = "../clblast-sys" }
typed-builder="0.9.0"

[dev-dependencies]
criterion = "0.3"
rand="0.8.4"
rand_chacha="*"

[[bench]]
name = "criterion_bench"
harness = false