[package]
name = "clblast"
version = "0.1.0"
description = "clblast bindings for rust"
license="Apache-2.0"
repository="https://github.com/csicar/clblast-rs"
authors = ["csicar <carsten.csiky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ocl="0.19.3"
ocl-core="0.11.2"
clblast-sys = { version = "0.2.0", path = "../clblast-sys" }
derive_builder="0.10.2"
snafu="0.6.10"

[dev-dependencies]
criterion = "0.3"
rand="0.8.4"
rand_chacha="0.3.1"

[[bench]]
name = "criterion_bench"
harness = false